--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,10 @@ services:
       - "3306:3306"
     restart: unless-stopped 
     environment:
-      MYSQL_ROOT_PASSWORD=parcial2
+      - MYSQL_ROOT_PASSWORD=parcial2
       - MYSQL_USER=utu
-      - MYSQL_PASSWORD=buceo
+      - MYSQL_PASSWORD=buceo  
       - MYSQL_DATABASE=segundoParcial
     volumes:
       - ./mysql:/var/lib/mysql
-  
 
